--- a/style.css
+++ b/style.css
@@ -13,8 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+label {
+  font-size: 1.5rem;
+  padding-right: 10px;
+}
+
 select#length {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin-bottom: 10px;
 }
 
